Fixes a problem were focusing on an input on mobile would break the layout of the form

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ input#title,
 input#pages {
     width: 250px;
     margin-right: 5px;
+    font-size: 1rem;
 }
 
 fieldset {
